NEWS -- an overview of user-visible changes with each release

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.21                        (2024-10-28)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.20                        (2024-10-23)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.19                        (2024-10-21)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.18                        (2024-10-07)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.17                        (2024-09-05)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.16                        (2024-08-30)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.15                        (2024-08-21)
----------------------------------------------------------------------
 * Supported new models

----------------------------------------------------------------------
epson-inkjet-printer-escpr2-1.2.14.1                      (2024-08-06)
----------------------------------------------------------------------
 * Supported new models
