@@ -1,8 +1,8 @@
 DIST epson-inkjet-printer-escpr2-1.1.62-1lsb3.2.i486.rpm 3696192 BLAKE2B 47600186c0d2c4291c5c729be5e9020efb527f765bccbbfa5b4b2e7ca972faf1a79e4c4fdbc9e6b1200e8d4945a187a28f70a9eb927d0b1a769015462124a634 SHA512 464a8de063e092092f464478c3167b8f18792e2a0cda22e970fbbd910eb4417d880c84730cfcc8ec1b4c24f214bd26fcaa13d296258394083a43d497fa753138
 DIST epson-inkjet-printer-escpr2-1.1.62-1lsb3.2.x86_64.rpm 3695594 BLAKE2B ef23b41c05104d488c2d67bf5a95523b496d548be91b826cf7a709bd370ae6c8156421fe89480fead743a99576c0c3aa70a129dccfa5173934adacb05dd5d7bb SHA512 2f0664e798166fd09e3da12328e02e8e9e51cac3ea3e941e293803dfa7e80e3b4523369373d8e0b917082c545374a6d1fbe88ae45ad7f18a94abc2a78a331218
-DIST epson-inkjet-printer-escpr2-1.2.20-1.x86_64.rpm 4294033 BLAKE2B 0f343cc96b291a6aa37dd5ba14cd2537ea0962df5f59b6578b686a2bf5eb4d18f0bc021e5ebbd2828ccad3d223cf67eacba124104ce0edc7e25f821c67611401 SHA512 5e9854e031d6c3810a899227f573bcabbdff2e8d0c973155e5851a2e8792f52e398867e46a5eb2a68aea3136cd4979be5e5c139783bb8b88dbd4e1cf4763d6ac
 DIST epson-inkjet-printer-escpr2-1.2.21-1.x86_64.rpm 4307896 BLAKE2B e69cd9ef72cacbf979d108d7172a82dd8f75f857de6dae49dd9e3aac0334e5007ce6dee213fdac3bd01ba7f008087c88d05b89df65fbac69ba92e6a5508f4cc0 SHA512 a5559220dd4a027f49c728ae5cb15d51ac82e891926793cabe1e6faf2bb6eeaee785c275290a137c60e6e402fb5731e025b75b2e101f40adc569f3f84f871502
+DIST epson-inkjet-printer-escpr2-1.2.22-1.x86_64.rpm 4528311 BLAKE2B 2a03450d06ea36288a9ed5e4130da954e267eee559df281e8463079df4031556dafb6c518415428b70fbc04e95814ef7d5221e4be9bf4a73ce01fc35c826f2e8 SHA512 0d8f0b9e89f020c55264072a1e98cfb5cda6c5471525602faa66d1b154b29515612a630c094098f23f0fa2b76238ffb1914bc385f4d78bdd79352286e67aac2d
 EBUILD epson-inkjet-printer-escpr2-bin-1.1.62.ebuild 1843 BLAKE2B bbe1b11046a92a16e9d0e76298620cb1b288d60569a89f705f37bd20b502dc9d54661e021bfae25075397f06db7c73f2245e7860d72533b1b96d43615a05e13e SHA512 3a0c9d2fabee1b1d0d87f7a794732539dd3c5685e16a9e32ea101c65f84016029e59e4dd7005c57d1bf3dc7195527bd99b3e0c8ce2ae13047659f7ba25a2b53c
-EBUILD epson-inkjet-printer-escpr2-bin-1.2.20.ebuild 1460 BLAKE2B 4d52e50003b55fc64ae7ed4120a02de670725321702556f2775d89a6a9c6d2cdba9f3d884c47ec53dc30b21743589b0756fca640e17c1c61a73b76350992c9a3 SHA512 af6e027eac57e1fa5998e4abc383b0f75f16cce15ff8be2a5aab59b42783ea0c87023e8ad04ac923690705d231fb17f856ef1966509df2507ed314454f56fe1c
 EBUILD epson-inkjet-printer-escpr2-bin-1.2.21.ebuild 1460 BLAKE2B c9f5c37be6170264a2c431280d38ee4ad6fe765b29d4638e43b96f7c8ebce805e12d33ee3358599cb5925a7a2164603570c0e6d2a40e537479adcee5e77106b1 SHA512 4ae48555cadc27823c9cb23d11e9b5fa9930c813974a79b2ce1fb7a2529ee524c10a5bf81470b119ab4ba404bd89ef7d433aca4dda033d3b087bd8daf6dbbb5e
+EBUILD epson-inkjet-printer-escpr2-bin-1.2.22.ebuild 1460 BLAKE2B 2e53c5189a47e09e6680a6cf1dfe1a89f815979abe4adfaf0363c418a52f608a804ecc0392380b7ab2de426d901bb24ca3be3d50d5ba8218a59b324e24a49665 SHA512 766786bf7ab17fc7515ef28cb810810476e109416a558f5537fca36109ad93022c9097d2f2fab458d276e01cd6b255fd65a023b73dd8c6255761833694d7f933
 MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
