@@ -1,9 +1,11 @@
 AUX gcc-no-implicit-function-declaration-1.1.15.patch 2428 BLAKE2B 2a6b8f6b9cba9694a5ff1909f5454ab6c3a3e19ef7706aa3f245991c2945b1ffe2f2a792fa85d14e2dd8cd5181eca9eed1b171c891f14c84d04b88cdfb8c097f SHA512 55cafa67de12daa9730e2aca3887b049dd52dd093e9f1609ea656165a67cd30bc1fc2b043c675f778a52e9e3fddce751f1b3533e31b7e6fbbbeede1cc25726ac
 AUX gcc-no-implicit-function-declaration-1.2.10.patch 2421 BLAKE2B 158c074ec7d37ee1a09b29bbee21c29da0ff2784fe25b22f64d2b199b07a8d8c90ca92477f7c284ded194c1a66bee219943b7c827bf7fb1b58227b3e7caedc3b SHA512 55533abc7b4f4cfa6c95868726721e59d187601722c0b2daa38d913f15ce9c695ae4c900274c46a770cfcdf85c46f77c724b936686a70bae34be5660c41a34aa
 DIST epson-inkjet-printer-escpr2-1.1.62.tar.gz 5101117 BLAKE2B 8bea8fa19ba56d008b1dce174367473287c386bcffbc2df2397f4d9aa396ca9ba447b2719d132e7dd7d800e51b685f6397bb30ed2eac1da813fe456fffa5723a SHA512 648006b9f7b14a5fd7ed31516d420c463383b99a8bbc693a2378128d4e4729290ba2deabfeb8526009c223f8e84d5565b4aba80b5478c6c4865ba9e84948b9b0
-DIST epson-inkjet-printer-escpr2-1.2.20-1.tar.gz 5791119 BLAKE2B 1a16662d91418658739322f0fa80889024f81cd8c703adfb4078c3614d850a740faeef2ee89e234d95a48fe45bbc6622b766bcd9fd9eb0c4ee7806aa23a663fc SHA512 f953f6b0bd7590c6bfbe692d187f1804ddaf6b7432fafa9aa9210ef47d9a9185da2ff0bf0942a81df7ec2898e3948c431bfd146924f879534e8a411e0e42bc20
 DIST epson-inkjet-printer-escpr2-1.2.21-1.tar.gz 5813878 BLAKE2B 21fa7bbf62ba21d67b3ccbdad31c9cff197b78f9fc12d03e9e5d7796702a91914c2519b377e88b9800748448a5fde68d2b52fafbf9736bf2a20bb022802fce99 SHA512 c46ccf008ea9375a0f5c2ed210b6d2979c773b8930ca2bf3a0b806ca9565a9dd7657283d205aea47012faebadfdaea449a234c4d81c653be55596cf092a20a18
+DIST epson-inkjet-printer-escpr2-1.2.22-1.tar.gz 6024510 BLAKE2B 474956724eb69becc045dd6f16a47ec4bf3a7632e6f34c9b70732acfdb584fb0ff485a59251716146cab89c08919da40613b466cf4cb6ef3740d0c138200c643 SHA512 e85354c760827826be0e6522d2b77d014caaff34ef0600b035794e9388b2b599e44923947fd8b9d8efdf66aab98f85a610f46fa216457d446056f02d5613df80
+DIST epson-inkjet-printer-escpr2-1.2.23-1.tar.gz 6058534 BLAKE2B c67e61392bda34796e7c994ba783536ff94e5bd777720a2d05be1e6e81aa3bc38c29f314ace95512cf662b7dc623dc1db5405084a0dc67dc044a9ea97f83d9b0 SHA512 b186bd3f9801d3961c3343d3d92c3d327de7f5654d276c0879cebbcfed01200f1508c22d2f659badbc9473981bc1c6cb6979840379057eac279361a7ab6354fe
 EBUILD epson-inkjet-printer-escpr2-1.1.62.ebuild 1526 BLAKE2B a7d8e558a18c211faf4c971074e88daf7c25b6b0c4ec0a9e5a4ef3657527fd3fa11c21a8aa7db42f419eeb1d45780635433d3e9efc8bd8dbc4b50420bc199443 SHA512 ce66e10bbff3de69007c0edf784c88578f2fcec6b9b81b745eb59541fba73dd43749abd35f58e3e4e13bd7d0a5f2196705a7438123d30af39d66cf1daa48ed64
-EBUILD epson-inkjet-printer-escpr2-1.2.20.ebuild 1898 BLAKE2B ab750d7ce981dd37b3ffc67f2079a71448b48a57007782b0414f61ae36e9a7ee386e1adc6aa65459da9fbe23dc4862c0d5594268c9e53fc6f1e4f5e58dea8001 SHA512 6b7c26c0641c835567538ef509ae0b393a7a91c1bcf5c56d70741ed687114b7b6cdbd4b5c3a9dd861d56d57d8d2b7acb6ca66c385da51f779d51cf8205463807
 EBUILD epson-inkjet-printer-escpr2-1.2.21.ebuild 1898 BLAKE2B 94d240c3ae2a900468b631fcefe3fb2803c646947dfe1c4dfbe5e39e471ec442045a40c65296e8f849a52f9a7e2870b28e046c6984632b9cfd9e32059547ee16 SHA512 c658c1bdddd52912506b6b80ad0db95424e04c27d4b364296b295ce9d0a81e09b6688e3849abcc05c762068b3179c2bba6ff5c81a388e71f763fd5ff1114a1f3
+EBUILD epson-inkjet-printer-escpr2-1.2.22.ebuild 1898 BLAKE2B ebfb2d0887d7ab4ea1b4a731e55f00edd3dce72cda8e275f79560d43661894e628545ccbca897c585ecad153ba146a924b841e683f200fb1ccf736ec0067fcca SHA512 f68d23852d68aa8efb4c68aa96049be3d623fec7a6cc945ea2110638ac034c4114cd5f371ae9f02b0af76badaccf2efa7d22c05755aaf806450688b48d544f35
+EBUILD epson-inkjet-printer-escpr2-1.2.23.ebuild 1898 BLAKE2B e9b951843ba9c9eca2f17811fee299d1889c421756f3c6a6f860af7f387680c576cca7a0f3e8b78ba09219d4315694102138d5d3d1ed908f0ada91440ff7c7e7 SHA512 10e17ab8d88c113909815230b6d70c20ceb206b83d81a083ea5d89f53ab6486f4d3d5f16c4ef5314e3139e42dda425c6b66633352b72c39dde1f60eda8c385dc
 MISC metadata.xml 775 BLAKE2B 4877278409048049f2b34c2f8603b0845bfbabdb5823b4ae6ab9559cfa64690a059e8d8b2d78990d443464e3604a7c50a1ea210f324cdd4beb7c103e25250f7c SHA512 76daff7f5cab31c3372e9e764497870ee78f1a22ff44225b943fe7f0e7545b56ad7a0cf4544213089d855e6f478facbfc40d43dfdc78abfa11315e6a03d83ac1
