@@ -1,6 +1,11 @@
 NEWS -- an overview of user-visible changes with each release
 
 ----------------------------------------------------------------------
+epson-inkjet-printer-escpr2-1.2.22                        (2024-12-11)
+----------------------------------------------------------------------
+ * Supported new models
+
+----------------------------------------------------------------------
 epson-inkjet-printer-escpr2-1.2.21                        (2024-10-28)
 ----------------------------------------------------------------------
  * Supported new models
